--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.14.0",
     "supervisor": "^0.12.0"
   }
 }
