--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
+    "streamifier": "^0.1.1",
     "supervisor": "^0.12.0"
   }
 }
